@@ -1,0 +1,33 @@
+<component name="ArtifactManager">
+  <artifact type="jar" name="SuperJavaPaint:jar">
+    <output-path>$PROJECT_DIR$/out/artifacts/SuperJavaPaint_jar</output-path>
+    <root id="archive" name="SuperJavaPaint.jar">
+      <element id="directory" name="META-INF">
+        <element id="file-copy" path="$PROJECT_DIR$/META-INF/MANIFEST.MF" />
+      </element>
+      <element id="module-output" name="SuperJavaPaint" />
+      <element id="extracted-dir" path="$MAVEN_REPOSITORY$/org/openjfx/javafx-controls/19.0.2/javafx-controls-19.0.2.jar" path-in-jar="/" />
+      <element id="extracted-dir" path="$MAVEN_REPOSITORY$/org/openjfx/javafx-fxml/19.0.2/javafx-fxml-19.0.2.jar" path-in-jar="/" />
+      <element id="extracted-dir" path="$MAVEN_REPOSITORY$/org/openjfx/javafx-graphics/19.0.2/javafx-graphics-19.0.2.jar" path-in-jar="/" />
+      <element id="extracted-dir" path="$MAVEN_REPOSITORY$/org/openjfx/javafx-controls/19.0.2/javafx-controls-19.0.2-mac-aarch64.jar" path-in-jar="/" />
+      <element id="extracted-dir" path="$MAVEN_REPOSITORY$/org/openjfx/javafx-graphics/19.0.2/javafx-graphics-19.0.2-mac-aarch64.jar" path-in-jar="/" />
+      <element id="extracted-dir" path="$MAVEN_REPOSITORY$/org/openjfx/javafx-swing/19/javafx-swing-19.jar" path-in-jar="/" />
+      <element id="extracted-dir" path="$MAVEN_REPOSITORY$/org/openjfx/javafx-base/19.0.2/javafx-base-19.0.2.jar" path-in-jar="/" />
+      <element id="extracted-dir" path="$MAVEN_REPOSITORY$/org/openjfx/javafx-fxml/19.0.2/javafx-fxml-19.0.2-mac-aarch64.jar" path-in-jar="/" />
+      <element id="extracted-dir" path="$MAVEN_REPOSITORY$/org/openjfx/javafx-swing/19/javafx-swing-19-mac-aarch64.jar" path-in-jar="/" />
+      <element id="extracted-dir" path="$MAVEN_REPOSITORY$/org/openjfx/javafx-base/19.0.2/javafx-base-19.0.2-mac-aarch64.jar" path-in-jar="/" />
+      <element id="dir-copy" path="$PROJECT_DIR$/resourceFiles" />
+      <element id="library" level="project" name="Maven: org.openjfx:javafx-controls:19.0.2" />
+      <element id="library" level="project" name="Maven: org.openjfx:javafx-controls:mac-aarch64:19.0.2" />
+      <element id="library" level="project" name="Maven: org.openjfx:javafx-graphics:19.0.2" />
+      <element id="library" level="project" name="Maven: org.openjfx:javafx-graphics:mac-aarch64:19.0.2" />
+      <element id="library" level="project" name="Maven: org.openjfx:javafx-base:19.0.2" />
+      <element id="library" level="project" name="Maven: org.openjfx:javafx-base:mac-aarch64:19.0.2" />
+      <element id="library" level="project" name="Maven: org.openjfx:javafx-fxml:19.0.2" />
+      <element id="library" level="project" name="Maven: org.openjfx:javafx-fxml:mac-aarch64:19.0.2" />
+      <element id="library" level="project" name="Maven: org.openjfx:javafx-swing:19" />
+      <element id="library" level="project" name="Maven: org.openjfx:javafx-swing:mac-aarch64:19" />
+      <element id="dir-copy" path="$PROJECT_DIR$/resourceFiles/icons" />
+    </root>
+  </artifact>
+</component>
