@@ -1,0 +1,7 @@
+package com.example.superjavapaint;
+
+public class Main {
+    public static void main(String[] args) {
+        PaintApp.main(args);
+    }
+}
